--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+
+    <string name="weather">Weather</string>
+    <string name="description">Description:</string>
+
+    <string name="main">Main</string>
+    <string name="temp">Temperature: %1$d</string>
+    <string name="pressure">Pressure: %1$d</string>
+    <string name="humidity">Humidity: %1$d</string>
+    <string name="temp_min">Min tem.: %1$d</string>
+    <string name="temp_max">Max tem.: %1$d</string>
 </resources>
